--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,21 @@
 body {
     font-family: 'Heebo', sans-serif;
 }
+
+.text-amiation {
+    animation-name: slide;
+    animation-duration: 1s;
+
+}
+
+@keyframes slide {
+    0% {
+        transform: translateX(3%);
+        opacity: 0;
+
+    }
+    100% {
+        transform: translateX(0%);
+        opacity: 100%;
+    }
+}
